[tool.poetry]
name = "roguelike-o1"
version = "0.1.0"
description = ""
authors = ["Sławomir Paszko <s.paszko@aisp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.4.26"

[tool.black]
line-length = 120
#Needed as of black 23.12.1 to properly split long stings
preview = true
exclude = '''
/(
    \.venv
    | \.pytest_cache
    | darknet\.py
    | darknet
    | yaya
    | aisp-albumentations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = ['.venv', '.pytest_cache', 'darknet.py', 'darknet', 'yaya', 'aisp-albumentations', 'images']

[tool.flake8]
max-line-length = 120
extend-select = ['B950']
# E203, E501, E701 are rules incompatiblie with black and are exclued as recommended by black documentation
extend-ignore = ['E501', 'E701', 'E203']
extend-exclude = ['.venv', '.pytest_cache', 'darknet.py', 'darknet', 'yaya', 'aisp-albumentations', 'images']

[tool.mypy]
exclude = ['.venv', '.pytest_cache', 'darknet.py', 'darknet', 'yaya', 'aisp-albumentations', 'images']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
